[package]
name = "dark_perps"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tfhe = { path = "./vendor/tfhe-rs/tfhe", features = ["boolean", "shortint", "integer", "gpu-rocm"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }